


commented out some system outputs
JStyledPane


in docs/api/org/softsmithy/lib/test
CVS: ----------------------------------------------------------------------
CVS: Enter Log.  Lines beginning with `CVS:' are removed automatically
CVS: 
CVS: Committing in .
CVS: 
CVS: Added Files:
CVS: 	package.html 
CVS: ----------------------------------------------------------------------


v20031023:  -number fields based on JFormattedTextField for int, long, short, 
             byte, double, float, BigInteger and BigDecimal added
            -TableCellEditors and CellRenderers based on these number 
             fields added
            -org.softsmithy.lib.swing.JXTable configured to use these new number
             editors and renderers by default
            -in org.softsmithy.lib.swing.JCustomizerPropertyTable the default 
             editors for the properties x and y have been set to an integer 
             editor with bounds (0, 10000), for width and height to an integer
             editor with bounds (1, 10000) and for thickness to a localized
             float editor with bounds (1, 10000)
            -utility class org.softsmithy.lib.util.Comparables added
            -utility classes BigIntegers and BigDecimals in package
             org.softsmithy.lib.math added
            -the way how changes to "x", "y", "width", "height", "background", 
             "foreground" and "font" in org.softmithy.lib.swing.JCustomizer 
             are handled and propagated has been fixed
            -some minor changes
v20030909:  -org.softsmithy.lib.awt.layout.InfiniteTableLayout bug fixes
            -style specific classes moved from 
             org.softsmithy.lib.swing.customizer -> 
             org.softsmithy.lib.swing.style
            -org.softsmithy.lib.swing.JXScrollPane with 
             org.softsmithy.lib.swing.JXViewport added with support for view 
             glassing
            -org.softsmithy.lib.swing.JXLabel added with support for shapes