@@ -1,0 +1,14 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+<HTML>
+  <HEAD>
+    <TITLE>SoftSmithy Utility Library Documentation</TITLE>
+  </HEAD>
+  <BODY>
+    Currently only the JavaDoc is available. A tutorial is planned!
+    <UL>
+        <LI><A href='api/index.html'>SoftSmithy Utility Library API
+        Specification (v20031023)</A></LI>
+    </UL>
+  </BODY>
+</HTML>
